--- a/app/src/main/res/layout/partial_details_info.xml
+++ b/app/src/main/res/layout/partial_details_info.xml
@@ -62,25 +62,47 @@
             app:layout_constraintStart_toEndOf="@+id/card_profile"
             app:layout_constraintTop_toTopOf="@+id/guideline"
             tools:text="User title here" />
-
-        <com.google.android.material.chip.ChipGroup
-            android:id="@+id/chip_group"
+        <TextView
+            android:id="@+id/reputation"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:layout_marginEnd="16dp"
+            android:layout_marginStart="16dp"
+            android:text="@{`Reputation: ` + userDetails.user.reputation}"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="@+id/text_title"
-            app:layout_constraintTop_toBottomOf="@+id/text_title">
+            app:layout_constraintStart_toEndOf="@+id/card_profile"
+            app:layout_constraintTop_toBottomOf="@+id/text_title"
+            tools:text="Reputation"
+            />
+        <TextView
+            android:id="@+id/location"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:text="@{userDetails.user.location}"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/card_profile"
+            app:layout_constraintTop_toBottomOf="@+id/reputation"
+            tools:text="Location"
+            />
 
-        </com.google.android.material.chip.ChipGroup>
+        <TextView
+            android:id="@+id/last_access_date"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            app:setDate="@{userDetails.user.lastAccessDate}"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/card_profile"
+            app:layout_constraintTop_toBottomOf="@+id/location"
+            tools:text="Last Access Date"
+            />
 
         <androidx.constraintlayout.widget.Barrier
             android:id="@+id/barrier2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:barrierDirection="bottom"
-            app:constraint_referenced_ids="text_title,chip_group,card_profile" />
+            app:constraint_referenced_ids="text_title,card_profile" />
 
         <View
             android:id="@+id/view_divider"
@@ -91,9 +113,6 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="@+id/barrier2" />
-
-
-
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </layout>
